update dashboard and form pendaftaran

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7527,7 +7527,7 @@ table tbody .border-bottom-info td {
 }
 
 .pcoded[nav-type="st6"] .pcoded-item.pcoded-left-item>li>a>.pcoded-micon i {
-    color: #c3c3c3
+    color: #fff
 }
 
 .pcoded[nav-type="st6"] .pcoded-navbar[navbar-theme="themelight1"] .pcoded-item.pcoded-left-item>li>a>.pcoded-micon {
@@ -10604,46 +10604,46 @@ table tbody .border-bottom-info td {
 }
 
 .pcoded .pcoded-navbar[navbar-theme="theme1"] {
-    background: #404E67
+    background: #2980b9
 }
 
 .pcoded .pcoded-navbar[navbar-theme="theme1"] .main-menu {
-    background-color: #404E67
+    background-color: #2980b9
 }
 
 .pcoded .pcoded-navbar[navbar-theme="theme1"] .main-menu .main-menu-header {
-    background-color: #404E67
+    background-color: #2980b9
 }
 
 .pcoded .pcoded-navbar[navbar-theme="theme1"] .main-menu .main-menu-header .user-details span {
-    color: #dcdcdc
+    color: #fff
 }
 
 .pcoded .pcoded-navbar[navbar-theme="theme1"] .main-menu .main-menu-content .more-details a {
-    color: #dcdcdc
+    color: #fff
 }
 
 .pcoded .pcoded-navbar[navbar-theme="theme1"] .pcoded-item>li>a {
-    color: #dcdcdc
+    color: #fff
 }
 
 .pcoded .pcoded-navbar[navbar-theme="theme1"] .pcoded-item>li.active>a {
-    background: #404E67;
-    color: #dcdcdc;
-    border-bottom-color: #404E67
+    background: #3498db;
+    color: #fff;
+    border-bottom-color: #3498db
 }
 
 .pcoded .pcoded-navbar[navbar-theme="theme1"] .pcoded-item>li>a {
-    border-bottom-color: #404E67
+    border-bottom-color: #3498db
 }
 
 .pcoded .pcoded-navbar[navbar-theme="theme1"] .pcoded-item li.pcoded-hasmenu .pcoded-submenu {
-    background: #404E67
+    background: #3498db
 }
 
 .pcoded .pcoded-navbar[navbar-theme="theme1"] .pcoded-item li.pcoded-hasmenu .pcoded-submenu li>a {
-    border-bottom-color: #546686;
-    color: #dcdcdc
+    border-bottom-color: #3498db;
+    color: #fff
 }
 
 .pcoded .pcoded-navbar[navbar-theme="theme1"] .pcoded-item>li.pcoded-hasmenu>a:after,
@@ -10658,8 +10658,8 @@ table tbody .border-bottom-info td {
 
 .pcoded .pcoded-navbar[navbar-theme="theme1"] .pcoded-item>li.active:hover>a,
 .pcoded .pcoded-navbar[navbar-theme="theme1"] .pcoded-item>li:hover>a {
-    background: #404E67;
-    color: #dcdcdc
+    background: #3498db;
+    color: #fff
 }
 
 .pcoded .pcoded-navbar[navbar-theme="theme1"] .pcoded-item .pcoded-hasmenu .pcoded-submenu li:hover>a {
@@ -10880,7 +10880,7 @@ table tbody .border-bottom-info td {
 }
 
 .pcoded .pcoded-header .navbar-logo[logo-theme="theme1"] {
-    background-color: #404E67
+    background-color: #2980b9;
 }
 
 .pcoded .pcoded-header .navbar-logo[logo-theme="theme2"] {
@@ -10900,7 +10900,7 @@ table tbody .border-bottom-info td {
 }
 
 .pcoded .pcoded-header .navbar-logo[logo-theme="theme1"] {
-    background-color: #404E67
+    background-color: #2980b9;
 }
 
 .pcoded[sidebar-img="true"] .pcoded-navbar {
@@ -11484,7 +11484,7 @@ table tbody .border-bottom-info td {
     background: #2196F3
 }
 
-.theme-color a[logo-theme="theme1"] .head:after {
+.theme-color a[logo-theme="NavbarBackground"] .head:after {
     background: #404E67
 }
 
